@@ -7,6 +7,10 @@
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
 
+HP-2011-05-19-0: Bugfix:     fixed setup and cleanup of issue_1803 test
+                 Issue:      TS-399
+                 Review:     SH
+
 SH-2011-05-19-0: Bugfix:     enhance qsub/check_option_pty() test to check if
                              the output/error files are written by the job user
                  Issue:      TS-397
